--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     fakeDisplay.quaternion.copy(camera.quaternion);
     camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
     fakeDisplay.update();
+    fakeDisplay.onrequestanimationframe = window.requestAnimationFrame;
     fakeDisplay.requestPresent([{source: canvas}])
       .then(() => {
         renderer.vr.setDevice(fakeDisplay);
