--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     fakeDisplay.quaternion.copy(camera.quaternion);
     camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
     fakeDisplay.update();
-    fakeDisplay.onrequestanimationframe = window.requestAnimationFrame;
+    fakeDisplay.onrequestanimationframe = fn => window.requestAnimationFrame(fn);
     fakeDisplay.requestPresent([{source: canvas}])
       .then(() => {
         renderer.vr.setDevice(fakeDisplay);
