Fix on-submit after an error it did not display the "Loading..."

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         _closeUrl();
           loadingBarState.ifLoaded = false;
           loadingBarState.ifLoading = true;
+          loadingBarState.ifError = false;
           loadingBarState.text = "Loading...";
           menuMesh.urlMesh.updateText();
           _openUrl(urlState.text);
