Clear error on url state submit

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 
         loadingBarState.loaded = false;
         loadingBarState.loading = true;
+        loadingBarState.error = false;
         loadingBarState.text = "Loading...";
         menuMesh.urlMesh.updateText();
       },
