--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         loadingBarState.loaded = false;
         loadingBarState.loading = true;
         loadingBarState.error = false;
-        loadingBarState.text = "Loading...";
+        loadingBarState.text = 'Loading...';
         menuMesh.urlMesh.updateText();
       },
     };
